packages/halo/scss/mixins/vendor-support/_react-select.scss
@mixin input-react-select {
  :global {
    .select__control {
      @include input;
      padding: 6px tempo(1) 6px tempo(2);
      box-shadow: none;
      width: 100%;

      &:hover {
        @include input-border--hover;
      }

      &.select__control--is-focused,
      &.select__control--menu-is-open.select__control--menu-is-open {
        @include input-border--hover;
      }
      &.select__control--is-focused {
        @include input-border--focused;
      }
      &.select__control--menu-is-open.select__control--menu-is-open {
        box-shadow: none;
        border-bottom-left-radius: 0;
        border-bottom-right-radius: 0;
      }

      &.select__control--is-disabled {
        @include input--disabled;
      }
      .select__single-value--is-disabled {
        @include font($color: $text-dark--a);
      }
    }

    .select__placeholder {
      @include font($size: md, $color: $text-dark--a);
    }

    .select__indicator,
    .select__indicator:hover {
      color: $slate--500;
    }

    .select__value-container {
      padding: 0;
      position: initial;
      span {
        /* added in so that label padding for role select field disappears */
        padding-left: 0;
      }
    }

    .select__indicator-separator {
      display: none;
    }

    .select__menu {
      border: 1px solid $blue--500;
      border-top-color: transparent;
      border-top-left-radius: 0;
      border-top-right-radius: 0;
      margin: 0;
      overflow: hidden;
      box-shadow: none;
      top: calc(100% - 1px);
    }

    .select__menu-list {
      padding: 0;
    }

    .select__option {
      background-color: $white;
      padding: tempo(0.5) tempo(2);
      border-top: 1px solid $blue--200;
    }

    .select__option:hover,
    .select__option--is-focused {
      background-color: $blue--200;
    }

    .select__option--is-selected {
      color: $text-dark--aaaa;
      background-color: $blue--200;
    }

    .select__option--is-disabled {
      @include font($color: $text-dark--a);
    }
  }

  &.error {
    :global {
      .select__control {
        @include input-border--warning;
      }
    }
  }
}

